k8s/sms-analyser-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: sms-analyser
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: sms-analyser
    spec: 
      containers: 
      - name: sms-analyser
        image: nwrightnz/sms-analyser
        ports: 
            - containerPort: 8999
