k8s/sms-analyser-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sms-analyser
spec:
  selector:
    app: sms-analyser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8999
