k8s/sms-analyser-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sms-analyser-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - host: <YOURHOSTNAME>
    http:
      paths:
      - backend:
          serviceName: sms-analyser
          servicePort: 80
